svg icon firefox fix

--- a/src/scss/components/Modules/Dropdown.scss
+++ b/src/scss/components/Modules/Dropdown.scss
@@ -182,7 +182,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
         }
     }
     &:not(.dropdown-menu-theme-dark) .dropdown-menu li > span:hover .ui.icon {
-        circle, path, polygon { fill: $color-text-inverse; }
+        .icon-use-path { fill: $color-text-inverse; }
     }
     &.dropdown-button {
         align-items: center;
@@ -218,50 +218,50 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
             .dropdown-selection-value { color: $color-text-static; cursor: inherit; }
             .ui.icon {
                 cursor: inherit;
-                circle, path, polygon { fill: $color-text-static; }
+                .icon-use-path { fill: $color-text-static; }
             }
         }
         &.dropdown-color- {
             &alert {
                 background-color: $bkgd-button-alert;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-inverse; }
+                    .icon-use-path { fill: $color-text-inverse; }
                 }
             }
             &alternate {
                 background-color: $bkgd-button-alternate;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-inverse; }
+                    .icon-use-path { fill: $color-text-inverse; }
                 }
             }
             &disable {
                 background-color: $bkgd-button-disable !important; cursor: default;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-static; }
+                    .icon-use-path { fill: $color-text-static; }
                 }
             }
             &light {
                 background-color: $bkgd-light; color: $color-text;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text; }
+                    .icon-use-path { fill: $color-text; }
                 }
             }
             &outline {
                 background-color: transparent; box-shadow: inset 0 0 0 1px $border-inverse; color: $color-text;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text; }
+                    .icon-use-path { fill: $color-text; }
                 }
             }
             &primary {
                 background-color: $bkgd-button;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-inverse; }
+                    .icon-use-path { fill: $color-text-inverse; }
                 }
             }
             &success {
                 background-color: $bkgd-button-success;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-inverse; }
+                    .icon-use-path { fill: $color-text-inverse; }
                 }
             }
         }
@@ -275,7 +275,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
                 box-shadow: inset 0 0 0 1px $border-light;
                 color: $color-text-inverse;
                 > .ui.icon {
-                    circle, path, polygon { fill: $color-text-inverse; }
+                    .icon-use-path { fill: $color-text-inverse; }
                 }
             }
             &primary { background-color: $bkgd-button; }
@@ -300,7 +300,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
                 background-color: $bkgd;
                 color: $color-text;
                 .ui.icon-color-primary.icon-inverse {
-                    circle, path, polygon { fill: $color-text; }
+                    .icon-use-path { fill: $color-text; }
                 }
             }
         }
@@ -345,7 +345,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
             cursor: default;
             pointer-events: none;
             .ui.icon {
-                circle, path, polygon { fill: $color-text-static; }
+                .icon-use-path { fill: $color-text-static; }
             }
         }
     }
@@ -385,7 +385,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
             .Select-value-label { color: $select-text-color-focus !important; }
             .Select-arrow-zone, .Select-clear-zone {
                 .ui.icon {
-                    circle, path, polygon {
+                    .icon-use-path {
                         fill: $select-input-arrow-color-focus;
                     }
                 }
@@ -629,7 +629,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
                     }
                 }
         &.is-open > .Select-control .Select-arrow-zone .ui.icon {
-            circle, path, polygon {
+            .icon-use-path {
                 fill: $color-text-highlight;
             }
         }
@@ -656,7 +656,7 @@ $select-item-disabled-border-color: darken($select-item-disabled-bg, 10%) !defau
             background-color: $bkgd;
             .Select-arrow-zone, .Select-clear-zone {
                 .ui.icon {
-                    circle, path, polygon { fill: $color-text; }
+                    .icon-use-path { fill: $color-text; }
                 }
             }
             .Select-value-label { color: $color-text !important; }
